- Many small bug fixes and improvements.

The ISO8601 date format (yyyy-MM-dd HH:mm:ssZZ) is used in the Admin GUI and EJBCA WS interface,
so clients no longer have to be aware of in what time zone the CA servers are located.
The old format (in US Locale) will still work for incoming requests in the WS, but any returned
UserDataVOWS containing custom start and end date will use the new format.

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 3.11.2 
------------
This is a maintenance release containing 11 bug fixes, and 12 new features/improvements.

* Noteworthy changes: 
- Several bug fixes
- Increased algorithm support on PKCS11 HSMs
- Added a webservice based RA written by Daniel Horn
- Possibility to disable the command line interface
- New CA CLI commands to import CRLs and certificates which are useful when migrating to EJBCA

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 4.0.1
-----------
This is a maintenance release – only one issue is resolved.

Changes:
- Fixed failure to perform web browser enrollment with Internet Explorer.

Read the full changelog for details.

For upgrade instructions, please see UPGRADE. 

EJBCA 4.0.0
-----------
EJBCA 4 uses Java Enterprise Edition (JEE) 5 instead of J2EE. This release is a major improvement
of the core, modularization, portability and packaging, but you will not notice many functional
differences.

The database schema is fully defined through the Java Persistence API and table create scripts are
provided for all the supported databases.

The Ingres database can now be used with EJBCA without patching the code.

Many bugs have been corrected. For example EJBCA Services will run more stable in a clustered
environment.

The interface ICustomPublisher has been modified, via removal of the number parameter from the
storeCRL method. Any custom classes implementing this interface need to be modified.
